--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
 header {
   background: #fff;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1rem 1.5rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   position: fixed;
